crates/glyph-cli/tests/corpus/invalid/freeform_marker_missing_operand.glyph
skill demo()
    description: "Demo."
    quality:
        require
    flow:
        "Do."
